--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
+spring.data.mongodb.database=user
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
